synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_ca.properties
+++ b/lib/messagebundles/MessagesBundle_ca.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Càrregues
 SEARCH_TIP=Cerqui i descarregui fitxers
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Miri les cerques i les càrregues
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Connecti's a altres clients
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Miri la llista de fitxers descarregats
