--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Uploads
 SEARCH_TIP=Søg og download filer.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Vis søgninger og uploads.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Opret forbindelse til andre klienter.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Vis bibliotek af lagrede filer.
