--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Uploads
 SEARCH_TIP=Erlaubt Ihnen Dateien zu suchen und herunterzuladen.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Kontrolliert eingehende Suchanfrage und Uploads.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Verbindungen zu anderen Benutzern.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Zeigt alle lokalen Dateien an.
