--- a/lib/messagebundles/MessagesBundle_el.properties
+++ b/lib/messagebundles/MessagesBundle_el.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=A\u03c1\u03c7\u03b5\u03af\u03b1 Upload
 SEARCH_TIP=A\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7 \u03ba\u03b1\u03b9 Download A\u03c1\u03c7\u03b5\u03af\u03c9\u03bd
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=E\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 A\u03bd\u03b1\u03b6\u03b7\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd \u03ba\u03b1\u03b9 Download A\u03c1\u03c7\u03b5\u03af\u03c9\u03bd
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=\u03a3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7 \u03bc\u03b5 \u0386\u03bb\u03bb\u03bf\u03c5\u03c2 X\u03c1\u03ae\u03c3\u03c4\u03b5\u03c2
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=E\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 A\u03c0\u03bf\u03b8\u03ae\u03ba\u03b7\u03c2 \u03c4\u03c9\u03bd A\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03bc\u03ad\u03bd\u03c9\u03bd A\u03c1\u03c7\u03b5\u03af\u03c9\u03bd
