--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Cargas
 SEARCH_TIP=Buscar y descargar archivos.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Ver búsquedas y cargas.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Conectar a otros clientes.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Ver archivos guardados.
