--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Tiedoston jaot
 SEARCH_TIP=Etsi ja lataa tiedostoja.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Seuraa hakuja ja tiedostonjakoja.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Yhteydet toisiin clientteihin.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Katso kirjastoa.
