--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Transferts
 SEARCH_TIP=Recherche et télécharge des fichiers sur le réseau Gnutella.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Contrôle les recherches reçues et les transferts en cours.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Contrôle l'état des connexions avec autres agents.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Accède au catalogue de vos fichiers enregistrés et partagés.
