--- a/lib/messagebundles/MessagesBundle_hi.properties
+++ b/lib/messagebundles/MessagesBundle_hi.properties
@@ -255,7 +255,7 @@ NO=\u0928\u0939\u0940\u0902
 #? SEARCH_TIP=
 #### MONITOR_TIP=View Searches and Uploads
 #? MONITOR_TIP=
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 #? CONNECTIONS_TIP=
 #### LIBRARY_TIP=View Repository of Saved Files
 #? LIBRARY_TIP=
