--- a/lib/messagebundles/MessagesBundle_hu.properties
+++ b/lib/messagebundles/MessagesBundle_hu.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Feltöltés
 SEARCH_TIP=File keresés letöltés
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Keresés és feltöltés megtekintés
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Kapcsolódás másik taghoz
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Mentett fileok megtekintése
