--- a/lib/messagebundles/MessagesBundle_is.properties
+++ b/lib/messagebundles/MessagesBundle_is.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Uppflutningur
 SEARCH_TIP=Leita og sækja skrár.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Skoða leitir og upphöl.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Tengjast öðrum notendum.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Skoða lista yfir vistaðar skrár.
