--- a/lib/messagebundles/MessagesBundle_it.properties
+++ b/lib/messagebundles/MessagesBundle_it.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Invia
 SEARCH_TIP=Cerca e scarica i file.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Visualizza le ricerche e i file da scaricare.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Connettiti ad altri clienti.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Visualizza l'elenco dei file salvati.
