--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=\uc62c\ub824\ub193\uae30
 SEARCH_TIP=\ud30c\uc77c \uac80\uc0c9\uacfc \ub0b4\ub824\ubc1b\uae30
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=\uac80\uc0c9\uacfc \uc62c\ub824\ub193\uae30 \ubcf4\uae30
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=\ub2e4\ub978 \ud074\ub77c\uc774\uc5b8\ud2b8\ub85c \uc5f0\uacb0
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=\uc800\uc7a5\ub41c \ud30c\uc77c \ucc3d\uace0 \ubcf4\uae30
