--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Uploads
 SEARCH_TIP=Zoek en download bestanden.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Bekijk zoektermen en uploads.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Verbindingen met andere gebruikers.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Overzicht van de gedeelde bestanden.
