--- a/lib/messagebundles/MessagesBundle_no.properties
+++ b/lib/messagebundles/MessagesBundle_no.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Opplastede
 SEARCH_TIP=Søk og last ned filer.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Se søk og opplastede filer.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Koble til andre klienter.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Se oppbevaring av lagrete filer.
