--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Wysy\u0142anie
 SEARCH_TIP=Wyszukiwanie i pobieranie plików
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Kontrola transferów oraz przegl\u0105danie wyników wyszukiwania
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=\u0141\u0105czenie si\u0119 z innymi
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Przegl\u0105danie pobranych plików
