--- a/lib/messagebundles/MessagesBundle_pt.properties
+++ b/lib/messagebundles/MessagesBundle_pt.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Uploads
 SEARCH_TIP=Pesquise e baixe arquivos.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Visualize pesquisas e uploads.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Conecte-se a outros clientes.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Visualize o local em que os arquivos são salvos.
