--- a/lib/messagebundles/MessagesBundle_ro.properties
+++ b/lib/messagebundles/MessagesBundle_ro.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Upload
 SEARCH_TIP=Cauta si descarca fisierele dorite
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Afiseaza rezultatul cautarilor si upload-urile
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Conexiuni la alti clienti
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Afiseaza rezumatul fisierelor salvate
