--- a/lib/messagebundles/MessagesBundle_sl.properties
+++ b/lib/messagebundles/MessagesBundle_sl.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Prenosi drugim
 SEARCH_TIP=Iskanje in prenos datotek.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Pregled iskanj in prenosov drugim.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Povezava k drugim odjemalcem.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Pregled shranjenih datotek.
