--- a/lib/messagebundles/MessagesBundle_sv.properties
+++ b/lib/messagebundles/MessagesBundle_sv.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Uppladdningar
 SEARCH_TIP=Sök och ladda ned filer.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Visa sökningar och uppladdningar.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Anslut mot andra klienter.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Visa alla tillgängliga sparade filer.
