--- a/lib/messagebundles/MessagesBundle_tr.properties
+++ b/lib/messagebundles/MessagesBundle_tr.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=Gönderilenler
 SEARCH_TIP=Dosya arama ve \u0131ndirme.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Arama sonuçlar\u0131n\u0131 ve gönderilenleri görüntüleme.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=Di\u011fer \u0131stemcilere ba\u011flanma.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=Kaydedilmi\u015f dosya klasörünü görüntüleme.
