--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=\u4e0a\u8f7d
 SEARCH_TIP=\u641c\u7d22 \u548c \u4e0b\u8f7d \u6587\u4ef6
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=\u663e\u793a \u641c\u7d22 \u548c \u4e0a\u8f7d
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=\u8fde\u63a5 \u5230\u5176\u4ed6 \u5ba2\u6237\u7aef
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=\u67e5\u770b \u4fdd\u5b58\u7684 \u6587\u4ef6
