--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=\u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u062c\u0627
 SEARCH_TIP=\u0628\u062d\u062b \u0648\u062a\u0646\u0632\u064a\u0644 \u0645\u0644\u0641\u0627\u062a.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=\u0639\u0631\u0636 \u0646\u062a\u0627\u0626\u062c \u0627\u0644\u0628\u062d\u062b \u0648\u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u062c\u0627\u0631\u064a \u062a\u062d\u0645\u064a\u0644\u0647\u0627.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=\u0627\u062a\u0635\u0644 \u0645\u0639 \u0645\u0633\u062a\u062e\u062f\u0645\u064a\u0646 \u0622\u062e\u0631\u064a\u0646.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=\u0639\u0631\u0636 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062d\u0641\u0648\u0638\u0629.
