--- a/lib/messagebundles/MessagesBundle_br.properties
+++ b/lib/messagebundles/MessagesBundle_br.properties
@@ -255,7 +255,7 @@ TRAY_EXIT_LABEL=Hent er-maez
 #? SEARCH_TIP=
 #### MONITOR_TIP=View Searches and Uploads
 #? MONITOR_TIP=
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 #? CONNECTIONS_TIP=
 #### LIBRARY_TIP=View Repository of Saved Files
 #? LIBRARY_TIP=
