--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=\u05e9\u05dc\u05d9\u05d7\u05d5\u05ea
 SEARCH_TIP=\u05d0\u05d9\u05ea\u05d5\u05e8 \u05d5\u05d4\u05d5\u05e8\u05d3\u05ea \u05e7\u05d1\u05e6\u05d9\u05dd.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=\u05d4\u05e6\u05d2\u05ea \u05d0\u05d9\u05ea\u05d5\u05e8\u05d9\u05dd \u05d5\u05e9\u05dc\u05d9\u05d7\u05ea\u05d4\u05dd.
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=\u05e7\u05e9\u05d9\u05e8\u05d4 \u05dc\u05dc\u05e7\u05d5\u05d7\u05d5\u05ea \u05d0\u05d7\u05e8\u05d9\u05dd.
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=\u05d4\u05e6\u05d2\u05ea \u05d4\u05e7\u05d1\u05e6\u05d9\u05dd \u05d4\u05e9\u05de\u05d5\u05e8\u05d9\u05dd.
