--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 SEARCH_TIP=\u30d5\u30a1\u30a4\u30eb\u3092\u691c\u7d22\u3057\u3066\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3059\u308b
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=\u691c\u7d22\u3068\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3092\u8868\u793a\u3059\u308b
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=\u4ed6\u306e\u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u306b\u63a5\u7d9a\u3059\u308b
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=\u4fdd\u5b58\u3057\u305f\u30d5\u30a1\u30a4\u30eb\u306e\u5834\u6240\u3092\u8868\u793a\u3059\u308b
