--- a/lib/messagebundles/MessagesBundle_ru.properties
+++ b/lib/messagebundles/MessagesBundle_ru.properties
@@ -255,7 +255,7 @@ UPLOAD_TITLE=\u0412\u044b\u0433\u0440\u0443\u0437\u043a\u0438
 SEARCH_TIP=\u041f\u043e\u0438\u0441\u043a \u0438 \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0430 \u0444\u0430\u0439\u043b\u043e\u0432
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0432\u0445\u043e\u0434\u044f\u0449\u0438\u0445 \u0437\u0430\u043f\u0440\u043e\u0441\u043e\u0432 \u0438 \u0432\u044b\u0433\u0440\u0443\u0437\u043a\u0438
-#### CONNECTIONS_TIP=Connect to Other Clients
+#### CONNECTIONS_TIP=Show Connections to Other Clients
 CONNECTIONS_TIP=\u0421\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u044f \u0441 \u0434\u0440\u0443\u0433\u0438\u043c\u0438 \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f\u043c\u0438 \u0441\u0435\u0442\u0438
 #### LIBRARY_TIP=View Repository of Saved Files
 LIBRARY_TIP=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0445\u0440\u0430\u043d\u0438\u043b\u0438\u0449\u0430 \u0444\u0430\u0439\u043b\u043e\u0432
